Added login backend
-Added google oauth2.0 using passport
-Modified User model to include profile information and flags
-Login button now opens the google login window
-Once login is succesful, redirects you to the home page
-Added README.md

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "bcryptjs": "^3.0.3",
+    "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
