--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node backend/server.js"
+    "dev": "cross-env NODE_ENV=development node backend/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,9 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^1.13.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
