--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node backend/server.js"
+    "dev": "node backend/server.js"
   },
   "keywords": [],
   "author": "",
